fdo#64283: SwMailMergeDlg: add back missing initialize

(regression from b248624126c271c88381d3dad6e04fc954f65779)

Change-Id: I0ed8c4ec91a095babccd089c7fe4508d123ba86d